--- a/index.html
+++ b/index.html
@@ -1,19 +1,94 @@
 <head>
-    <title>Block WEB interface</title>
-    <meta http-equiv="Content-Type" content="text/plain">
-    <meta http-equiv="Access-Control-Allow-Origin" content="*" />
-    <meta http-equiv="Access-Control-Allow-Headers" content="Content-Type" />
-    <meta http-equiv="Access-Control-Allow-Methods" content="GET, POST, PUT" />
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,600,800,900" rel="stylesheet">
-    </head>
-    <font face="arial" style="src:local"></font>
-    <style type="text/css">body{font-family:'Montserrat',system-ui,-apple-system,Segoe UI,Roboto,Noto Sans,Ubuntu,Cantarell,Helvetica Neue;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;font-weight:lighter;color:#b5b9bd;background:radial-gradient(at bottom,#203030,#111);-webkit-user-select:none}.logo{fill:#fff;margin:auto;width:max(20vw,20vh);height:max(20vw,20vh);z-index:6;position:relative;padding-top:calc(40vh - max(10vw,10vh))}.logo_svg{filter:drop-shadow(0 0 50px #fffa) drop-shadow(-10px 0 80px #f0fa) drop-shadow(10px 0 80px #0ffa)}.logo_text{text-align:center;font-weight:bold;font-size:max(3vw,3vh);color:#fff;position:fixed;width:100vw;bottom:5vh;z-index:7}.star{--twinkle-duration:"";--twinkle-delay:"";--star-size:"";position:absolute;width:var(--star-size);height:var(--star-size);background:#fff;border-radius:50%;animation:twinkle infinite alternate;animation-duration:var(--twinkle-duration);animation-delay:var(--twinkle-delay);z-index:5}@keyframes twinkle{from{transform:scale(1)}to{transform:scale(1.5);box-shadow:0 0 5px .5px rgba(150,150,150,0.6)}}</style>
-    <body>
-    <div class="star"></div>
-    <div class="logo">
-    <svg class="logo_svg" version="1.0" xmlns="http://www.w3.org/2000/svg" width="100%" viewBox="0 0 600 500" preserveAspectRatio="xMidYMid meet">
-    <g transform="translate(0.000000,500.000000) scale(0.100000,-0.100000)" stroke="none">
-    <path d="M1695 4960 c-395 -62 -713 -330 -829 -700 -58 -182 -58 -398 0 -580
+<title>CONNECT Docs | All about CONNECT Shart Home | Tutorials, examples, cases, API</title>
+<meta http-equiv="Content-Type" content="text/plain">
+<meta name="keywords" content="CONNECT, CONNECT Smart Home, CONNECT Wiki, CONNECT Docs, tutorials, examples, cases, API">
+<meta name="description" content="Free Web tutorials and documentation for CONNECT Smart Home automation system.">
+<meta name="author" content="CONNECT Smart Home">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel='shortcut icon' href='https://cdn.shopify.com/s/files/1/0030/3159/7129/files/IMG_7761_1_32x32.png?v=1679065868' type="image/png"/>
+<link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,600,800,900" rel="stylesheet">
+</head>
+<font face = "arial" style= "src: local"></font>
+
+<style type="text/css">
+body {
+  font-family: 'Montserrat', system-ui, -apple-system, Segoe UI, Roboto, Noto Sans, Ubuntu, Cantarell, Helvetica Neue;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-weight: lighter;
+  color:#b5b9bd;
+  background: radial-gradient(at bottom, #203030, #111);
+	-webkit-user-select: none;
+}
+
+.logo {
+	fill: #fff;
+    margin: auto;
+    width: max(10vw, 10vh);
+    height: max(10vw, 10vh);
+    z-index: 6;
+    position: relative;
+    padding-top: calc(40vh - max(10vw, 10vh));
+}
+
+.logo_svg{
+	filter: drop-shadow(0 0 50px #fffa) drop-shadow(-10px 0 80px #f0fa) drop-shadow(10px 0 80px #0ffa);
+	/*inset 0 0 50px #fff, inset 20px 0 80px #f0f, inset -20px 0 80px #0ff, inset 20px 0 300px #f0f, inset -20px 0 300px #0ff, 
+	0 0 50px #fff, -10px 0 80px #f0f, 10px 0 80px #0ff;*/
+}
+
+.logo_text{
+	text-align: center;
+    font-weight: bold;
+    font-size: max(3vw, 3vh);
+	color: #fff;
+	position: fixed;
+	width: 100vw;
+	bottom: 5vh;
+	z-index: 7;
+}
+
+
+.star {
+  --twinkle-duration: "";
+  --twinkle-delay: "";
+  --star-size: "";
+  position: absolute;
+  width: var(--star-size);
+  height: var(--star-size);
+  background: #fff;
+  border-radius: 50%;
+  animation: twinkle infinite alternate;
+  animation-duration: var(--twinkle-duration);
+  animation-delay: var(--twinkle-delay);
+  z-index: 5;
+}
+  
+@keyframes twinkle {
+    from {
+        transform: scale(1);
+    }
+    to {
+        transform: scale(1.5);
+        box-shadow: 0 0 5px 0.5px rgba(150, 150, 150, 0.6);
+    }
+}
+
+</style>
+  
+<body>
+
+	<div class="star"></div>
+
+	<a href="https://yoctoconnect.com">
+        <div class="logo">
+            <svg class="logo_svg" version="1.0" xmlns="http://www.w3.org/2000/svg"
+            width="100%" viewBox="0 0 600 500"
+            preserveAspectRatio="xMidYMid meet">
+
+            <g transform="translate(0.000000,500.000000) scale(0.100000,-0.100000)"
+            stroke="none">
+            <path d="M1695 4960 c-395 -62 -713 -330 -829 -700 -58 -182 -58 -398 0 -580
             64 -204 160 -338 372 -521 25 -21 42 -44 42 -57 0 -12 -126 -365 -281 -784
             -198 -539 -288 -769 -304 -784 -13 -13 -42 -23 -72 -27 -179 -21 -386 -159
             -482 -320 -78 -132 -111 -291 -91 -437 22 -157 82 -280 191 -390 270 -274 708
@@ -30,14 +105,71 @@
             -330 -892 -349 -914 -14 -16 -25 -17 -84 -11 -115 11 -401 -34 -480 -76 -48
             -26 -59 -14 -462 499 -247 316 -391 507 -393 525 -3 20 6 43 31 81 263 397
             207 923 -136 1253 -188 182 -420 279 -682 288 -66 2 -147 0 -180 -5z"/>
-    </g>
-    </svg>
-    </div>
-    <div class="logo_text">
-    CONNECT 3.0
-    </div>
-    </body>
-    <script type="text/javascript">/*<![CDATA[*/const RECONNECT_CNT=10;const REQUEST_TMOUT=400;const INTRFCE_V='4.0';const $el=document.body;const genRandomNumber=(min,max)=>{return Math.random()*(max-min)+min;}
-    const genStar=()=>{const star=document.createElement("div");star.classList.add("star");let x=genRandomNumber(1,$el.offsetWidth);let y=genRandomNumber(1,$el.offsetHeight);const{style}=star;style.left=Math.floor(x)+"px";style.top=Math.floor(y)+"px";style.setProperty("--star-size",genRandomNumber(1,3)+"px");style.setProperty("--twinkle-duration",Math.ceil(genRandomNumber(1,5))+"s");style.setProperty("--twinkle-delay",Math.ceil(genRandomNumber(1,5))+"s");return star;}
-    for(let index=0;index<50;index++){$el.append(genStar());}/*]]>*/</script>
-    </html>
+            </g>
+            </svg>
+        </div>
+    </a>
+
+	<div class="logo_text">
+		CONNECT Docs
+        <p style = 'font-size: max(2vw, 2vh); color: #aaa; font-weight: 100;'>Soon...</p> 
+	</div>
+    
+
+</body>
+
+<script type="text/javascript">
+	const RECONNECT_CNT = 10;
+	const REQUEST_TMOUT = 400;
+	const INTRFCE_V = '4.0';
+
+	// Night Sky element
+
+const $el = document.body;
+
+// Generate a random number between min and max values
+
+const genRandomNumber = (min, max) => {
+    return Math.random() * (max - min) + min;
+}
+
+// Generate a star <div>
+
+const genStar = () => {
+
+    const star = document.createElement("div");
+    star.classList.add("star");
+
+    // Gen star coordinates relative to $el size
+    let x = genRandomNumber(1, $el.offsetWidth);
+    let y = genRandomNumber(1, $el.offsetHeight);
+
+    const { style } = star;
+
+    style.left = Math.floor(x) + "px";
+    style.top = Math.floor(y) + "px";
+
+    style.setProperty(
+        "--star-size",
+        genRandomNumber(1, 3) + "px"
+    );
+
+    style.setProperty(
+        "--twinkle-duration",
+        Math.ceil(genRandomNumber(1, 5)) + "s"
+    );
+
+    style.setProperty(
+        "--twinkle-delay",
+        Math.ceil(genRandomNumber(1, 5)) + "s"
+    );
+
+    return star;
+}
+
+for (let index = 0; index < 50; index++) {
+    $el.append(genStar());
+}
+
+</script>
+</html>
