--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-<title>CONNECT Docs | All about CONNECT Shart Home | Tutorials, examples, cases, API</title>
+<title>CONNECT Docs | All about CONNECT Smart Home | Tutorials, examples, cases, API</title>
 <meta http-equiv="Content-Type" content="text/plain">
 <meta name="keywords" content="CONNECT, CONNECT Smart Home, CONNECT Wiki, CONNECT Docs, tutorials, examples, cases, API">
 <meta name="description" content="Free Web tutorials and documentation for CONNECT Smart Home automation system.">
@@ -46,6 +46,7 @@ body {
 	width: 100vw;
 	bottom: 5vh;
 	z-index: 7;
+    text-shadow: 10px 10px 10px #1115;
 }
 
 
